HelloWorld/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_101\bin\javadoc.exe
-sourcepath
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\leJOS NXJ\lib\nxt\classes.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld
-d
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
HelloWorld
-windowtitle
HelloWorld
-author
-version
-nodeprecated
-private
-tag
pre:a:Precondition:
-tag
post:a:Postcondition:
-link
C:\Users\Default\Desktop\JavaDocs\api\
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/SquareTracer2.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/HelloWorld.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/TouchTest.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/MotorProgram2.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/TouchSensor.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/MotorProgram1.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/MotorProgram4.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/MotorProgram3.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/SteerTest.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/MotorProgram5.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/SonicTest.java
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld/SquareTracer.java
<---- end of javadoc command ---->
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\SquareTracer2.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\HelloWorld.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\TouchTest.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\MotorProgram2.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\TouchSensor.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\MotorProgram1.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\MotorProgram4.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\MotorProgram3.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\SteerTest.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\MotorProgram5.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\SonicTest.java...
Loading source file C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\SquareTracer.java...
Constructing Javadoc information...
C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\TouchSensor.java:5: error: class TouchTest is public, should be declared in a file named TouchTest.java
public class TouchTest 
       ^
Standard Doclet version 1.8.0_101
Building tree for all the packages and classes...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\HelloWorld.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\MotorProgram1.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\MotorProgram2.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\MotorProgram3.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\MotorProgram4.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\MotorProgram5.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\SonicTest.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\SquareTracer.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\SquareTracer2.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\SteerTest.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\TouchTest.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\TouchTest.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\package-frame.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\package-summary.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\package-tree.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\constant-values.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\serialized-form.html...
Building index for all the packages and classes...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\overview-tree.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\index-all.html...
Building index for all classes...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\allclasses-frame.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\allclasses-noframe.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\index.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\help-doc.html...
Generating C:\Users\gjliu\lego-robotic-operating-buddies\HelloWorld\doc\stylesheet.css...
Note: Custom tags that could override future standard tags:  @pre, @post. To avoid potential overrides, use at least one period character (.) in custom tag names.
Note: Custom tags that were not seen:  @pre, @post
1 warning
